add github file upload